--- a/style.css
+++ b/style.css
@@ -1,207 +1,276 @@
 body{
-	background-color: #222;
 	margin: 0;
-	padding-top: 60px;
+	background-color: #000000;
+	padding-top: 50px;
 }
 #top-menu{
 	position: fixed;
-	height: 60px;
+	height: 50px;
 	width: 100%;
-	background-color: #000;
-	z-index: 10000; 
+	background-color: #111;
+	background-image: url(46.jpg);
+	background-size: 10%;
+	box-shadow: 0 0 50px 6px #000 inset;
 	top: 0;
 	z-index: 100000;
 }
-.top-menu-btn{
-	position: relative;
-	display: inline-block;
-	color: white;
-	font-size: 35px;
-	height: 40px;
+#top-menu-logo{
+	height: 50px;
+	width: 100px;
+	position: absolute;
+}	
+#top-menu-logo-img{
+	height: 50px;
+}
+.top-menu-left-btn{
+	height: 30px;
 	padding: 10px;
-}
-.vec{
-	height: 50%;
 	display: inline-block;
-	transition-duration: 2s;
-	transition-property: transform;
-}
-.top-menu-btn:hover .vec{
-	transform: rotateX(180deg);
-}
-.box{
 	position: relative;
-	width: 100%;
+	left: 100px;
+	font-size: 20px;
+	color: #aaa;
+	transition-duration: 4s;
+	transition-property: color background-color;
 }
-#ad-box{
-	height: 200px;
+#top-menu-left a{
+	text-decoration: none;
+	color: #aaa;
+}
+.top-menu-left-btn:hover{
+	background-color: rgba(64,64,64,0.5);
+	color: #ff0000;
+} 
+#top-menu-left-btn1{
+	width: 125px;
+}
+#tml-btn1-vec{
+	width: 16px; 
+	height: 16px;
+	position: absolute;
+	right: 17px;
+	top: 17px;
+}
+#tml-btn1-vec:hover{
+	transform: rotate(-180deg);
+}
+#tml-btn1-menu{
+	position: absolute;
+	top: 100%;
+	width: 260px;
+	height: 0;
+	background-color: #222;
+	left: 0;
 	overflow: hidden;
+	transition-duration: height;
 }
-#ad-box-img{
-	position: absolute;
-	top: 50%;
-	left: 50%;
-	transform: translate(-50%,-50%);
-	width: 100%;
-	min-height: 100%;
+#top-menu-left-btn1:hover #tml-btn1-menu{
+	height: 200px;
 }
-.simple-border-btn{
-	border: solid #fff 3px;
-	padding: 20px;
-	margin: 10px;
-	border-radius: 5px;
+.tml-btn1-menu-field{
+	height: 30px;
+	padding: 10px;
+	font-size: 25px;
+	color: #aaa;
+}
+.tml-btn1-menu-field:hover{
+	background-color: rgb(64,64,64,0.5);
 	color: #fff;
-	font-size: 35px;
-	text-align: center;
-	text-shadow: 0 0 10px #000;
-	transition-duration: 600ms;
-	transition-propertyrty: padding;
 }
-.simple-border-btn:hover{
-	padding: 25px;
-	margin: 10px;
-}
-#ad-box-btn{
-	position: absolute;
-	top: 50%;
-	left: 79%;
-	transform: translate(-50%,-50%);
-	margin: 0
+#box1{
+	width: 100%;
+	position: relative;
 
 }
-.middle{
+#box1-img{
 	width: 100%;
-	height: 3px;
-	background: linear-gradient(to right #974,#222,#400);
+	position: relative;
 }
-.simple-solid-btn{
-	padding: 25px;
-	margin: 10px;
-	border: solid # 4px;
-	border-radius: 5px;
-	color: #000;
-	font-size: 35px;
-	text-align: center;
-	text-shadow: 0 0 10px #000;
-	transition-duration: 600ms;
-	transition-property: padding, margin;
-	background-color: #974;
-}
-#ad-box-text{
+#top-menu-right{
 	position: absolute;
-	top: 50%;
-	left: 25%;
-	transform: translate(-50%,-50%);
+	height: 100%;
+	right:0;
+	top:0;
+}
+#top-menu-right a{
+	text-decoration: none;
+}
+.top-menu-right-btn{
+	display: inline-block;
+	font-size: 25px;
+	height: 30px;
+	padding: 10px;
+	color: #aaa;
+	transition-duration: 4s;
+	transition-property: color background-color;
+}
+#top-menu-right-btn1:hover{
 	color: #fff;
-	max-width: 40%;
-	font-size: 30px;
-	text-shadow: 0 0 10px #fff;
+}
+#top-menu-right-btn2:hover{
+	color: #fff;
+}
+#top-menu-right-btn3:hover{
+	color: #fff;
+	background-color: #000;
 }
 #box1-title{
 	position: absolute;
-	left: 75%;
-	top: 50%;
-	transform: translate(-50%,-50%);
-	min-width: 40%;
-	max-width: 50%;
+	left: 21px;
+	bottom: 11px;
+	width: 300px;
+	padding-top: 160px;
+	padding-bottom: 50px;
+	height: 40px;
+	font-size: 35px;
 	color: #fff;
-	font-size: 30px;
+}
+#box1-title-img{
+	width: 100%;
+	position: absolute;
+	top: 0;
+}
+.pretty-btn{
+	background-color: rgb(62,84,117,0.9);
+	color: rgb(151,205,225,0.9);
+	border:solid:rgba(151,205,225,0.9);
+	box-shadow: 0 0 10px rgb(151,205,225) inset;
 	text-align: center;
+	display: inline-block;
+	padding: 9px;
+	height: 31px;
+	font-size: 26px;
+	position: relative;
 }
-#box1-title a{
-	text-decoration: none;
-}
-#box1-title b{
-	font-size: 50px;
-}
-#box1-img{
-	width: 	100%;
+.pretty-btn:hover{
+	text-shadow: rgb(151,205,225);
 }
 .box1-title-btn{
-	display: inline-block;
-	background-color: #eb5631;
+	width: 120px;
 }
-#box1{
-	margin: -4px;
-}
-#box2-img{
+.pretty-btn-line{
+	height: 4px;
+	position: absolute;  
+	left: 0
+	right: 0;
+	margin: auto;
 	width: 100%;
+	background: linear-gradient(90deg,rgba(151,205,225,0.4),rgba(151,205,225,1),rgba(151,205,225,0.1));
+	transition-duration: 3s;
+	transition-property: width;
+
 }
-#box2-tittle{
-	position: absolute;
-	left: 25%;
-	top: 25%;
-	transform: translate(-50%,-50%,);
-	width: 40%;
-	color: #fff;
-	font-size: 30px;
-	text-align:center;
-}
-#box2-tittle a{
-	height: 50%;
-} 
-#box2-tittle-img{
-	width: 150px;
-}
-.top-menu-btn:hover{
-	color: #fdd;
-	text-shadow: 0 0 10px #f00;
-	background-color: 
-}
-#box3{
-	height: 1000px;
-	background-color: #aaa;
-}
-.box3-card{
-	position: absolute;
-	height: 800px;
-	width: 400px;
-	padding: 50px;
-	top: 50px;
-	background-color: #222;
-}
-#box3-card1{
-	right: 51%;
-}
-#box3-card2{
-	left: 51%;
-}
-.box3-card-tittle{
-	color: #fff;
-	font-size: 30px;
-}
-.box3-card-tittle a{
-	text-decoration: none;
-}
-.box3-card-tittle b{
-	font-size: 50px;
-}
-.box3-card-img{
-	width: 100%;
-}
-.box3-card-gradient{
-	background: linear-gradient: (to bottom,rgba(0,0,0,0),rgba(0,0,0,1),rgba(0,0,0,1));
+.pretty-btn-line-top{
 	top: 0;
-	left: 0;
-	height: 100%;
-	width: 100%;
 }
-.tmb-menu{
+.pretty-btn-line-bottom{
+	bottom: 0;
+}
+.pretty-btn:hover .pretty-btn-line{
+	width: 100%;
+	box-shadow: 0 0 10px rgb(161,215,255);
+}
+.box2-left-title:hover .box2-left-title-img{
+	transform: translate(-50%,-50%); scale(1.1);
+}
+.box2-left-title-img{
 	position: absolute;
-	background-color: rgba(0,0,0,0,8); 
-	width: 250px;
-	left: 0;
-	top: 100%;
-	transform: rotateX(90deg);
+	top: 50%;
+	left: 50%;
+	min-width: 100%;
+	min-height: 100%;
+	transform: translate(-50%,-50%);
+	z-index: -1;
 	transition-duration: 2s;
 	transition-property: transform;
 }
-#top-btn1 .tmb-menu-btn{
-	width: 200px;
+#box2-right li:hover{
+	color: #fff;
 }
-#top-btn2 .tmb-menu-btn{
-	width: 200px;
+#box2-right a{
+	text-decoration: none;
 }
-#top-btn3 .tmb-menu-btn{
-	width: 200px;	
+.box2-left-descr{
+	position: absolute;
+	width: 80%;
+	padding: 20px;
+	padding-left: 10%;
+	padding-right: 10%;
+	text-align: center;
+	background-color: rgba(0,0,0,0.5);
+	color: #fff;
+	font-size: 30px;
+	top: 100%;
+	transition-duration: 2s;
+	transition-property: transform;
+}
+.box2-left-title:hover .box2-left-descr{
+	transform: translateY(-100%);
+}
+@media(max-width: 1300px){
+	body{
+		padding-top: 100px;
+	}
+	#top-menu{
+		height: 100px;
+	}
+	#top-menu-right{
+		top: 50%;
+	}
+}
+@media(max-width: 760px){
+	body{
+		padding-top: 50px;
+	}
+	#top-menu{
+		height: 50px;
+	}
+	#top-menu-right{
+		top: 0;
+	}
+	#top-menu-left-btn2{
+		display: none;
+	}
+	#top-menu-left-btn3{
+		display: none;
+	}
+	#top-menu-left-btn4{
+		display: none;
+	}
+	#top-menu-right{
+
+	}
+	#top-menu-right-btn2{
+		display: none;
+	}
+	#top-menu-right-btn3{
+		display: none;
+	}
+
+}
+@media(max-width:610px){
+	#top-menu-right-btn1{
+		display: none;
+	}
+	#top-menu-right{
+		font-size: 0;
+	}
+}
+@media(max-width:480px){
+	body{
+		padding-top: 0;
+	}
+	#top-menu{
+		display: none;
+	}
+}
+#box3{
+	position: relative;
+	width: 100%;
+	background-color: #111;
+	text-align: center;
+	font-size: 50px;
+	color: #aaa;
+	padding-top: 50px;
+	padding-bottom: 50px;
 }
